# wfbuddy

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
data/: Cargo.toml
data/src/: droptable.rs  id.rs  lib.rs  structs.rs
data/src/market/: ducats.rs  items.rs
data/src/publicexport/: mod.rs  recipes.rs  relicarcane.rs  resources.rs  sentinels.rs  warframes.rs  weapons.rs
data/src/schema/: droptable.rs  items.rs  mod.rs  vaulted.rs
data/src/schema/publicexport/: mod.rs  relicarcane.rs
ie/: Cargo.toml
ie/src/: image.rs  lib.rs  ocr.rs  theme.rs  util.rs
ie/src/screen/: relicreward.rs
wfbuddy/: Cargo.toml  i18n.toml
wfbuddy/i18n/en-US/: wfbuddy.ftl
wfbuddy/i18n/es-ES/: wfbuddy.ftl
wfbuddy/src/: app.rs  capture.rs  config.rs  i18n.rs  iepol.rs  logwatcher.rs  main.rs  overlay.rs
wfbuddy/src/module/: debug.rs  mod.rs  relicreward.rs
wfbuddy/src/ui/: mod.rs  settings.rs
wfbuddy/src/util/: assets.rs  mod.rs  owned_captures.rs
