[package]
name = "data"
version = "0.1.0"
edition = "2024"

[dependencies]
ureq = {version = "3.1.4", features = ["json"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
levenshtein = "1.0.5"
# blake3 = "1.8.2"
regex = "1.12.2"
lzma-rs = "0.3.0"
anyhow = "1.0.100"
lasso = "0.7.3"