[package]
name = "ie"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "model_downloader"

[dependencies]
anyhow = "1.0.100"
regex = "1.12.2"
fast_image_resize = "5.4"
# ocrs = "0.11"
rten = {version = "0.22.1", default-features = false}
serde = {version = "1.0.228", features = ["derive"]}
png = "0.18"
ocr-rs = "2.0.2"
log = "0.4.28"
