[package]
name = "wfbuddy"
version = "0.1.0"
edition = "2024"

# [[bin]]
# name = "test"

[[bin]]
name = "windows"

[dependencies]
# i18n / localization
i18n-embed = { version = "0.16.0", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10.0"
rust-embed = "8.0.0"
unic-langid = "0.9.5"
raw-window-handle = "0.6.2"

png = "0.18"
xcap = "0.7.1"
regex = "1.12.2"
notify = "8.2.0"
anyhow = "1.0.100"
egui = "0.33.3"
eframe = "0.33.3"
dirs = "6.0.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
levenshtein = "1.0.5"

ie = {path = "../ie"}
data = {path = "../data"}